web-infras/parser/tests/fixtures/babel/es2022/class-private-names-duplicated/instance-set-instance-field/output.txt
[SyntaxError]: Duplicate private name. (3,3)
3|  #x = 0;
 | ^
